
xpilotsounddir =  $(pkgdatadir)/sound
xpilotsound_DATA = \
	sounds.txt \
	Drop01.wav \
	MusicaDefault.wav \
	RobotzDefault.wav \
	RobotzQuestion.wav \
	UtopiaClose.wav \
	bfire.wav \
	bloop.wav \
	buzzer.wav \
	confirm.wav \
	corkpop.wav \
	done.wav \
	doorchimes.wav \
	explo2.wav \
	failure.wav \
	finished.wav \
	flare.wav \
	gundead.wav \
	launch1.18.wav \
	lboom.wav \
	magic.wav \
	popclick.wav \
	sboom.wav \
	sbounce.wav \
	sstart.wav \
	success.wav \
	waiting.wav \
	zap.wav \
	thrust.wav

EXTRA_DIST = $(xpilotsound_DATA)
