
xpilottexturesdir =  $(pkgdatadir)/textures
xpilottextures_DATA = \
	acwise_grav.ppm \
	allitems.ppm \
	asteroid.ppm \
	asteroidconcentrator.ppm \
	ball.ppm \
	ball_gray.ppm \
	ball_gray16.ppm \
	base_down.ppm \
	base_left.ppm \
	base_right.ppm \
	base_up.ppm \
	bullet.ppm \
	bullet2.ppm \
	bullet_blue.ppm \
	bullet_green.ppm \
	cannon_down.ppm \
	cannon_left.ppm \
	cannon_right.ppm \
	cannon_up.ppm \
	checkpoint.ppm \
	clouds.ppm \
	concentrator.ppm \
	cwise_grav.ppm \
	fuel2.ppm \
	fuelcell.ppm \
	holder1.ppm \
	holder2.ppm \
	huditems.ppm \
	logo.ppm \
	metabtndown.png \
	metabtnup.png \
	metalite.ppm \
	meter.ppm \
	mine_other.ppm \
	mine_team.ppm \
	minus.ppm \
	missile.ppm \
	moon.ppm \
	paused.ppm \
	plus.ppm \
	radar.ppm \
	radar2.ppm \
	radar3.ppm \
	refuel.ppm \
	rock4.ppm \
	sdlmetabg.png \
	shield.ppm \
	ship.ppm \
	ship_enemy.ppm \
	ship_friend.ppm \
	ship_blue.ppm \
	ship_red.ppm \
	ship_red2.ppm \
	ship_red3.ppm \
	sparks.ppm \
	target.ppm \
	volcanic.ppm \
	wall_bottom.ppm \
	wall_dl.ppm \
	wall_dr.ppm \
	wall_fi.ppm \
	wall_left.ppm \
	wall_right.ppm \
	wall_top.ppm \
	wall_ul.ppm \
	wall_ull.ppm \
	wall_ur.ppm \
	wall_url.ppm \
	wormhole.ppm

EXTRA_DIST = $(xpilottextures_DATA)
