
EXTRA_DIST = \
about.c bitmaps.c bitmaps.h BSString.cpp BSString.h \
colors.c configure.c credits.inc.h dbuff.h guimap.c guiobjects.c \
icon.h join.c MainFrm.cpp MainFrm.h \
paintdata.c paintdata.h painthud.c paintradar.c \
record.c RecordDummy.c record.h resource.h \
Splash.cpp Splash.h StdAfx.cpp StdAfx.h TalkWindow.cpp TalkWindow.h \
widget.c widget.h \
winAbout.cpp winAbout.h winAudio.c winAudio.h winBitmap.c winBitmap.h \
winClient.h winColors.c wintalk.c \
winXThread.c winXThread.h winXXPilot.h \
xdefault.c xevent.c xevent.h xeventhandlers.c xeventhandlers.h \
xinit.c xinit.h xpaint.c xpaint.h xpclient_x11.h xpilot.c \
xpilot.dep xpilotDoc.cpp xpilotDoc.h xpilot.dsp xpilot.dsw xpilot.mak \
XPilotNT.cpp XPilotNT.h xpilot.rc xpilotView.cpp xpilotView.h

SUBDIRS = res

