
EXTRA_DIST = \
	itemAfterburner.xbm \
	itemArmor.xbm \
	itemAutopilot.xbm \
	itemCloakingDevice.xbm \
	itemDeflector.xbm \
	itemEcm.xbm \
	itemEmergencyShield.xbm \
	itemEmergencyThrust.xbm \
	itemEnergyPack.xbm \
	itemHyperJump.xbm \
	itemLaser.xbm \
	itemMinePack.xbm \
	itemMirror.xbm \
	itemPhasingDevice.xbm \
	itemRearShot.xbm \
	itemRocketPack.xbm \
	itemSensorPack.xbm \
	itemTank.xbm \
	itemTractorBeam.xbm \
	itemTransporter.xbm \
	itemWideangleShot.xbm
